--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@ body {
   font-size: 16px;
 }
 
-h1 {
-  color: #F28E1C;
-}
-
 .dark-body {
   background-image: url("http://greycoder.com/wp-content/uploads/2013/09/mystery-man-wallpaper.jpg");
   background-size: cover;
@@ -28,10 +24,6 @@ h1 {
   background-color: #FAF0BE;
 }
 
-.neutral-container {
-  background-color: #F0FFFF;
-}
-
 .dark-container {
   background: #4c4c4c;
   background: -webkit-linear-gradient(#4c4c4c 0%, #666666 9%, #595959 17%, #474747 26%, #666666 44%, #2c2c2c 59%, #2b2b2b 71%, #2c2c2c 74%, #1c1c1c 88%, #111111 91%, #000000 97%, #131313 100%);
@@ -46,7 +38,7 @@ h1 {
 }
 
 .header {
-  color: red;
+  color: #F28E1C;
 }
 
 .left-button {
@@ -80,7 +72,11 @@ h1 {
   height: 50px;
 }
 
-.text-box {
-  width: 500px;
-  height: 500px;
+.output {
+  width: 400px;
+  height: 300px;
+  border: 2px black solid;
+  margin: auto;
+  margin-top: 15px;
+  visibility: hidden;
 }
