--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /* CSS rules for Caesars Cipher */
 body {
-  font-size: 16px;
   background-size: cover;
   background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0ZE_u5d7K5XZeQ080lfhTl5ojK8gjKGi2JoWNp4e6LAsOJbuz");
 
@@ -33,36 +32,36 @@ body {
 
 .heading {
   color: #F28E1C;
+  font-weight: 700;
 }
 
 .dark-heading{
   color: #ee0000;
 }
 
+.button {
+  width: 10em;
+  height: 5em;
+  border: 2px solid;
+  margin: 10px;
+  margin-top: 20px;
+}
+
 .left-button {
   -webkit-box-shadow: 10px 0px 25px -2px rgba(230,16,16,0.72);
   -moz-box-shadow: 10px 0px 25px -2px rgba(230,16,16,0.72);
   box-shadow: 10px 0px 25px -2px rgba(230,16,16,0.72);
-  width: 10em;
-  height: 5em;
-  border: 2px solid;
   background-color: #A41313;
   color: #fff;
-  margin: 10px;
-  margin-top: 20px;
 }
 
 .right-button {
   -webkit-box-shadow: 10px 0px 25px -2px rgba(53,196,43,1);
   -moz-box-shadow: 10px 0px 25px -2px rgba(53,196,43,1);
   box-shadow: 10px 0px 25px -2px rgba(53,196,43,1);
-  width: 10em;
-  height: 5em;
-  border: 2px solid;
   background-color: #66FF00;
   color: #000;
-  margin: 10px;
-  margin-top: 20px;
+
 }
 
 .input {
@@ -73,8 +72,20 @@ body {
 .output {
   width: 400px;
   height: 300px;
-  border: 2px black solid;
   margin: auto;
   margin-top: 15px;
   visibility: hidden;
+}
+
+.bright-output {
+  visibility: visible;
+  border: 2px black solid;
+}
+
+.dark-output {
+  visibility: visible;
+  border: 2px red solid;
+  background-color: #890000;
+  color: black;
+  font-weight: 600;
 }
