Add breakpoints to navigate better

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
   visibility: hidden;
 }
 
+/* TODO style bright output*/
 .bright-output {
   visibility: visible;
   border: 2px black solid;
