logicHold.js was not intented to include in project

--- a/style.css
+++ b/style.css
@@ -98,6 +98,6 @@ body {
   visibility: visible;
   border: 2px red solid;
   background-color: #890000;
-  color: black;
+  color: #EEEEEE;
   font-weight: 600;
 }
